objects/mkto_si__Best_Bets_View__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__IncludeDefaultColumns__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Optionally include: name | account | last interesting moment | status | priority</description>
        <label>Include Default Columns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxPages__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Max Pages</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__MaxRows__c</fullName>
        <label>Max Rows</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_si__OwnerFilter__c</fullName>
        <description>AC: All Contacts
MTC: My Team&apos;s Contacts
MC: My Contacts
AL: All Leads
MTL: My Team&apos;s Leads
ML: My Leads</description>
        <label>Owner Filter</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ShowRecordsWithNegativeScores__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Records With Negative Scores</label>
        <type>Checkbox</type>
    </fields>
    <label>Best Bets View</label>
    <nameField>
        <label>Best Bets View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Best Bets Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>